Update lab2.md